courses/430_programming-languages/assignment-8/tests/error/error53.sml



val prog = PROGRAM {decls=[],stmts=[]} : program

;
